[gd_scene load_steps=16 format=2]

[ext_resource path="res://texturas/IMG-20211118-WA0005.jpg" type="Texture" id=1]
[ext_resource path="res://texturas/IMG-20211118-WA0004.jpg" type="Texture" id=2]
[ext_resource path="res://src/Button.gd" type="Script" id=3]
[ext_resource path="res://src/Player.gd" type="Script" id=4]
[ext_resource path="res://endless background/elem1.png" type="Texture" id=5]
[ext_resource path="res://endless background/elem2.png" type="Texture" id=6]
[ext_resource path="res://endless background/elem4.png" type="Texture" id=7]
[ext_resource path="res://endless background/elem3.png" type="Texture" id=8]
[ext_resource path="res://endless background/elem5.png" type="Texture" id=9]
[ext_resource path="res://endless background/elem6.png" type="Texture" id=10]
[ext_resource path="res://endless background/elem7.png" type="Texture" id=11]
[ext_resource path="res://endless background/elem9.png" type="Texture" id=12]
[ext_resource path="res://endless background/elem8.png" type="Texture" id=13]
[ext_resource path="res://src/ParallaxBackground.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.25, 39.25 )

[node name="MainNode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teste" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="teste"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.407843, 0.407843, 0.407843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tabuleiro" type="Sprite" parent="teste"]
position = Vector2( 642, 366 )
scale = Vector2( 0.759086, 0.759086 )
texture = ExtResource( 1 )

[node name="player" type="Sprite" parent="teste"]
position = Vector2( 256, 481 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Button" type="Button" parent="teste"]
margin_left = 1166.0
margin_top = 618.0
margin_right = 1250.0
margin_bottom = 638.0
text = "Jogar dados"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Casas" type="Node2D" parent="teste"]

[node name="Area2D0" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D0"]
position = Vector2( 255.5, 586.5 )
shape = SubResource( 1 )

[node name="Area2D1" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D1"]
position = Vector2( 257.5, 478.5 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D2"]
position = Vector2( 251, 379 )
shape = SubResource( 1 )

[node name="Area2D3" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D3"]
position = Vector2( 224, 285 )
shape = SubResource( 1 )

[node name="Area2D4" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D4"]
position = Vector2( 219, 183 )
shape = SubResource( 1 )

[node name="Area2D5" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D5"]
position = Vector2( 282, 106 )
shape = SubResource( 1 )

[node name="Area2D6" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D6"]
position = Vector2( 393, 97 )
shape = SubResource( 1 )

[node name="Area2D7" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D7"]
position = Vector2( 481, 161 )
shape = SubResource( 1 )

[node name="Area2D8" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D8"]
position = Vector2( 500, 259 )
shape = SubResource( 1 )

[node name="Area2D9" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D9"]
position = Vector2( 476, 356 )
shape = SubResource( 1 )

[node name="Area2D10" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D10"]
position = Vector2( 441, 447 )
shape = SubResource( 1 )

[node name="Area2D11" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D11"]
position = Vector2( 437, 546 )
shape = SubResource( 1 )

[node name="Area2D12" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D12"]
position = Vector2( 504, 619 )
shape = SubResource( 1 )

[node name="Area2D13" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D13"]
position = Vector2( 623, 623 )
shape = SubResource( 1 )

[node name="Area2D14" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D14"]
position = Vector2( 697, 560 )
shape = SubResource( 1 )

[node name="Area2D15" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D15"]
position = Vector2( 692, 456 )
shape = SubResource( 1 )

[node name="Area2D16" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D16"]
position = Vector2( 664, 363 )
shape = SubResource( 1 )

[node name="Area2D17" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D17"]
position = Vector2( 627, 270 )
shape = SubResource( 1 )

[node name="Area2D18" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D18"]
position = Vector2( 638, 167 )
shape = SubResource( 1 )

[node name="Area2D19" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D19"]
position = Vector2( 735, 124 )
shape = SubResource( 1 )

[node name="Area2D20" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D20"]
position = Vector2( 849, 139 )
shape = SubResource( 1 )

[node name="Area2D21" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D21"]
position = Vector2( 899, 230 )
shape = SubResource( 1 )

[node name="Area2D22" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D22"]
position = Vector2( 898, 324 )
shape = SubResource( 1 )

[node name="Area2D23" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D23"]
position = Vector2( 861, 415 )
shape = SubResource( 1 )

[node name="Area2D24" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D24"]
position = Vector2( 836, 515 )
shape = SubResource( 1 )

[node name="Area2D25" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D25"]
position = Vector2( 904, 588 )
shape = SubResource( 1 )

[node name="Area2D26" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D26"]
position = Vector2( 1018, 587 )
shape = SubResource( 1 )

[node name="Area2D27" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D27"]
position = Vector2( 1067, 500 )
shape = SubResource( 1 )

[node name="Area2D28" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D28"]
position = Vector2( 1048, 406 )
shape = SubResource( 1 )

[node name="Area2D29" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D29"]
position = Vector2( 1030, 310 )
shape = SubResource( 1 )

[node name="Area2D30" type="Area2D" parent="teste/Casas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teste/Casas/Area2D30"]
position = Vector2( 1044, 209 )
shape = SubResource( 1 )

[node name="dados" type="RichTextLabel" parent="teste"]
margin_left = 1163.0
margin_top = 557.0
margin_right = 1258.0
margin_bottom = 597.0
text = "Dados: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="teste"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 14 )
scrolling_speed = 50.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_mirroring = Vector2( 3000, 0 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 3000.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 112, 135 )
scale = Vector2( 0.399554, 0.399554 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 277, 572 )
scale = Vector2( 0.364686, 0.364686 )
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 2095, 716 )
scale = Vector2( 0.58747, 0.58747 )
texture = ExtResource( 8 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 2673, 214 )
scale = Vector2( 0.359477, 0.359477 )
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 2188, 140 )
scale = Vector2( 0.429825, 0.429825 )
texture = ExtResource( 9 )

[node name="Sprite6" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 1527, 262 )
scale = Vector2( 0.582883, 0.582883 )
texture = ExtResource( 10 )

[node name="Sprite7" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 1106, 509 )
rotation = 1.09258
scale = Vector2( 0.583821, 0.583821 )
texture = ExtResource( 11 )

[node name="Sprite8" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 496.937, 212.875 )
scale = Vector2( 0.381579, 0.381579 )
texture = ExtResource( 13 )

[node name="Sprite9" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( 950, -21 )
scale = Vector2( 0.214052, 0.214052 )
texture = ExtResource( 12 )
